# tester-digiblock

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.yaml  deploy.sh
reports/: 20230630-071617--digiblock2-FAIL.yaml
src/: main.rs
src/controller/: adc.rs  app.rs  digiblock.rs  flashing.rs  mod.rs  pwm.rs  reles.rs  report.rs  worker.rs
src/model/: mod.rs  model.rs  report.rs
src/view/: app.rs  mod.rs  style.rs
tools/: main.py
