[package]
name = "digiblock_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
#iced = "0.9.0"
tokio = {version="1.0.0", features = ["full"] }
serde = {version="1.0", features =["derive"]}
serde_yaml = "0.9"
chrono = "0.4.23"
