[package]
name = "digiblock_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = "*"
tokio-serial = "*"
iced = {version="0.9.0", features=["tokio"]}
iced_native = "*"
iced_futures = "*"
tokio = {version="1.0.0", features = ["full"] }
serde = {version="1.0", features =["derive"]}
serde_yaml = "0.9"
chrono = "0.4.23"
rppal = "0.14.1"
mcp3208 = "0.1.0"
serialport = "*"
tokio-retry = "*"
